syntax = "proto3";

option go_package = "openline-ai/message-store/ent/proto/";

import "google/protobuf/timestamp.proto";


enum MessageType {
  MESSAGE = 0;
  FILE = 1;
}
enum MessageDirection {
  INBOUND = 0;
  OUTBOUND = 1;
}

enum MessageChannel {
  WIDGET = 0;
  MAIL = 1;
  WHATSAPP = 2;
  FACEBOOK = 3;
  TWITTER = 4;
  VOICE = 5;
}

message Message {
  MessageType type = 1;
  string message = 2;
  string username = 3;
  MessageChannel channel = 4;
  MessageDirection direction = 5;
  optional google.protobuf.Timestamp time = 6;
  optional int64 id = 7;
  optional Contact contact = 8;
}

message Contact {
  string username = 1;
  optional int64 id = 2;
}

message PageInfo {
  optional google.protobuf.Timestamp before = 1;
  int32 pageSize = 2;
}

message PagedContact {
  Contact contact = 1;
  PageInfo page = 2;
}

message MessageList {
  repeated Message message = 1;
}

message FeedList {
  repeated Contact contact = 1;
}

message Empty {
}

service MessageStoreService {
  rpc saveMessage(Message) returns (Message) {};
  rpc getMessages(PagedContact) returns (MessageList) {};
  rpc getMessage(Message) returns (Message) {};
  rpc getFeeds(Empty) returns (FeedList) {};
  rpc getFeed(Contact) returns (Contact) {};


}
